# KaHIP

./: .clang-format  .clang-tidy  .gersemirc  .gitignore  .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile
cmake/: Cache.cmake  CompilerWarnings.cmake  FindGurobi.cmake  InterproceduralOptimization.cmake  KaHIPSettings.cmake  Linker.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Utilities.cmake
lib/tools/: random_functions.h
parallel/modified_kahip/: CMakeLists.txt
parallel/modified_kahip/app/: configuration.h  interface_test.cpp  parse_parameters.h
parallel/modified_kahip/interface/: kaHIP_interface.cpp
parallel/modified_kahip/lib/: definitions.h
parallel/modified_kahip/lib/algorithms/: cycle_search.cpp  cycle_search.h  strongly_connected_components.cpp  strongly_connected_components.h  topological_sort.cpp  topological_sort.h
parallel/modified_kahip/lib/data_structure/: graph_access.h  graph_hierarchy.cpp  graph_hierarchy.h  union_find.h
parallel/modified_kahip/lib/data_structure/matrix/: matrix.h  normal_matrix.h
parallel/modified_kahip/lib/data_structure/priority_queues/: bucket_pq.h  maxNodeHeap.h  priority_queue_interface.h
parallel/modified_kahip/lib/io/: graph_io.cpp  graph_io.h
parallel/modified_kahip/lib/parallel_mh/: diversifyer.h  parallel_mh_async.cpp  parallel_mh_async.h  population.cpp  population.h
parallel/modified_kahip/lib/parallel_mh/exchange/: exchanger.cpp  exchanger.h
parallel/modified_kahip/lib/parallel_mh/galinier_combine/: construct_partition.cpp  construct_partition.h  gal_combine.cpp  gal_combine.h
parallel/modified_kahip/lib/partition/: graph_partitioner.cpp  graph_partitioner.h  partition_config.h
parallel/modified_kahip/lib/partition/coarsening/: coarsening.cpp  coarsening.h  coarsening_configurator.h  contraction.cpp  contraction.h
parallel/modified_kahip/lib/partition/coarsening/clustering/: node_ordering.cpp  node_ordering.h  size_constraint_label_propagation.cpp  size_constraint_label_propagation.h
parallel/modified_kahip/lib/partition/coarsening/edge_rating/: edge_ratings.cpp  edge_ratings.h
parallel/modified_kahip/lib/partition/coarsening/matching/: compare_degrees.h  matching.cpp  matching.h  random_matching.cpp  random_matching.h
parallel/modified_kahip/lib/partition/coarsening/matching/gpa/: compare_rating.h  gpa_matching.cpp  gpa_matching.h  path.cpp  path.h  path_set.cpp  path_set.h
parallel/modified_kahip/lib/partition/coarsening/stop_rules/: stop_rules.h
parallel/modified_kahip/lib/partition/initial_partitioning/: bipartition.cpp  bipartition.h  initial_partition_bipartition.cpp  initial_partition_bipartition.h  initial_partitioner.cpp  initial_partitioner.h  initial_partitioning.cpp  initial_partitioning.h
parallel/modified_kahip/lib/partition/initial_partitioning/initial_refinement/: initial_refinement.cpp  initial_refinement.h
parallel/modified_kahip/lib/partition/uncoarsening/: uncoarsening.cpp  uncoarsening.h
parallel/modified_kahip/lib/partition/uncoarsening/refinement/: mixed_refinement.cpp  mixed_refinement.h  refinement.cpp  refinement.h
parallel/modified_kahip/lib/partition/uncoarsening/separator/: vertex_separator_algorithm.cpp  vertex_separator_algorithm.h  vertex_separator_flow_solver.cpp  vertex_separator_flow_solver.h
parallel/modified_kahip/lib/partition/w_cycles/: wcycle_partitioner.cpp  wcycle_partitioner.h
parallel/modified_kahip/lib/tools/: graph_communication.cpp  graph_communication.h  graph_extractor.cpp  graph_extractor.h  graph_partition_assertions.h  misc.cpp  misc.h  partition_snapshooter.cpp  partition_snapshooter.h  quality_metrics.cpp  quality_metrics.h  random_functions.cpp  random_functions.h  timer.h
parallel/parallel_src/: CMakeLists.txt
parallel/parallel_src/app/: configuration.h  dspac.cpp  edge_list_to_metis_graph.cpp  friendster_list_to_metis_graph.cpp  graph2binary.cpp  graph2binary_external.cpp  parhip.cpp  parse_dspac_parameters.h  parse_parameters.h  readbgf.cpp  toolbox.cpp
parallel/parallel_src/interface/: parhip_interface.cpp
parallel/parallel_src/lib/: definitions.h  partition_config.h
parallel/parallel_src/lib/communication/: dummy_operations.cpp  dummy_operations.h  mpi_tools.cpp  mpi_tools.h  mpi_types.h
parallel/parallel_src/lib/data_structure/: balance_management.cpp  balance_management.h  balance_management_coarsening.cpp  balance_management_coarsening.h  balance_management_refinement.cpp  balance_management_refinement.h  hashed_graph.h  linear_probing_hashmap.h  linear_probing_hashmap_ll.h  next_prime.h  parallel_graph_access.cpp  parallel_graph_access.h
parallel/parallel_src/lib/distributed_partitioning/: distributed_partitioner.cpp  distributed_partitioner.h  stop_rule.h
parallel/parallel_src/lib/distributed_partitioning/initial_partitioning/: distributed_evolutionary_partitioning.cpp  distributed_evolutionary_partitioning.h  initial_partitioning.cpp  initial_partitioning.h  random_initial_partitioning.cpp  random_initial_partitioning.h
parallel/parallel_src/lib/dspac/: dspac.cpp  dspac.h  edge_balanced_graph_io.cpp  edge_balanced_graph_io.h
parallel/parallel_src/lib/io/: parallel_graph_io.cpp  parallel_graph_io.h  parallel_vector_io.cpp  parallel_vector_io.h
parallel/parallel_src/lib/parallel_contraction_projection/: parallel_block_down_propagation.cpp  parallel_block_down_propagation.h  parallel_contraction.cpp  parallel_contraction.h  parallel_projection.cpp  parallel_projection.h
parallel/parallel_src/lib/parallel_label_compress/: hmap_wrapper.h  node_ordering.cpp  node_ordering.h  parallel_label_compress.h
parallel/parallel_src/lib/tools/: distributed_quality_metrics.cpp  distributed_quality_metrics.h  helpers.h  random_functions.cpp  random_functions.h  timer.h
parallel/parallel_src/tests/: CMakeLists.txt
parallel/parallel_src/tests/catch_mpi/: catch_mpi_runner.cpp
parallel/parallel_src/tests/parallel_contraction/: parallel_contraction_mpi_test.cpp  parallel_contraction_test.cpp
(+62 files in other folders)
